initial 1.21.1, starts but no world creation lol