@@ -1,35 +1,40 @@
 package net.arcane.ascended_arts.skill.weaponinnate;
 
 import net.arcane.ascended_arts.gameasset.AscendedAnimations;
-import net.minecraft.network.FriendlyByteBuf;
+
+import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.world.effect.MobEffect;
+
 import net.minecraft.world.effect.MobEffectInstance;
-import net.minecraft.world.effect.MobEffects;
+
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.item.ItemStack;
 import yesman.epicfight.api.animation.types.AttackAnimation;
 import yesman.epicfight.api.asset.AssetAccessor;
-import yesman.epicfight.skill.SkillBuilder;
+import yesman.epicfight.api.event.EntityEventListener;
+import yesman.epicfight.api.event.EpicFightEventHooks;
+
+import yesman.epicfight.registry.entries.EpicFightMobEffects;
 import yesman.epicfight.skill.SkillContainer;
+import yesman.epicfight.skill.SkillSlots;
 import yesman.epicfight.skill.weaponinnate.WeaponInnateSkill;
 import yesman.epicfight.world.capabilities.entitypatch.player.PlayerPatch;
 import yesman.epicfight.world.capabilities.item.CapabilityItem;
-import yesman.epicfight.world.effect.EpicFightMobEffects;
-import yesman.epicfight.world.entity.eventlistener.PlayerEventListener;
+
 
 import java.util.List;
 import java.util.Map;
-import java.util.UUID;
+
 
 public class CelestialOnslaughtSkill extends WeaponInnateSkill {
-    private static final UUID EVENT_UUID = UUID.fromString("1d993f97-eb4c-4f38-bf31-3f48df103582");
+
     public final AssetAccessor<? extends AttackAnimation> first;
     public final AssetAccessor<? extends AttackAnimation> second;
     public final AssetAccessor<? extends AttackAnimation> third;
 
-    public CelestialOnslaughtSkill (SkillBuilder<? extends WeaponInnateSkill> builder) {
+    public CelestialOnslaughtSkill (WeaponInnateSkill.Builder<?> builder) {
         super(builder);
         this.first = AscendedAnimations.CELESTIAL_ONSLAUGHT_FIRST;
         this.second = AscendedAnimations.CELESTIAL_ONSLAUGHT_SECOND;
@@ -38,56 +43,52 @@ public class CelestialOnslaughtSkill extends WeaponInnateSkill {
     }
 
     @Override
-    public void onInitiate(SkillContainer container) {
-        container.getExecutor().getEventListener().addEventListener(PlayerEventListener.EventType.ATTACK_ANIMATION_END_EVENT, EVENT_UUID, (event) -> {
-            if (AscendedAnimations.CELESTIAL_ONSLAUGHT_FIRST.equals(event.getAnimation())) {
-                List<LivingEntity> hurtEntities = event.getPlayerPatch().getCurrentlyActuallyHitEntities();
+    public void onInitiate(SkillContainer container, EntityEventListener eventListener) {
+        super.onInitiate(container, eventListener);
+        List<LivingEntity> hurtEntities = container.getExecutor().getCurrentlyActuallyHitEntities();
+        SkillContainer innateSkill = container.getExecutor().getSkill(SkillSlots.WEAPON_INNATE);
+        eventListener.registerEvent(EpicFightEventHooks.Animation.END, (event) -> {
+            if (this.first.equals(event.getAnimation())) {
+                if (!hurtEntities.isEmpty() && hurtEntities.getFirst().isAlive()) {
+                    container.getExecutor().reserveAnimation(this.second);
+                    container.getExecutor().getServerAnimator().getPlayerFor(null).reset();
+                }
 
-                if (!hurtEntities.isEmpty() && hurtEntities.get(0).isAlive()) {
-                    event.getPlayerPatch().getServerAnimator().getPlayerFor(null).reset();
-                    event.getPlayerPatch().reserveAnimation(this.second);
-                    event.getPlayerPatch().getCurrentlyActuallyHitEntities().clear();
-
-
+                if (!container.getExecutor().isLogicalClient()) {
+                    if (innateSkill != null && innateSkill.getSkill() != null && eventListener.getEntityPatch().isLastAttackSuccess() && hurtEntities.getFirst().isDeadOrDying()) {
+                        innateSkill.getSkill().setConsumptionSynchronize(innateSkill, this.consumption * 0.75F);
+                    }
                 }
             }
-            if (AscendedAnimations.CELESTIAL_ONSLAUGHT_SECOND.equals(event.getAnimation())) {
-                List<LivingEntity> hurtEntities = event.getPlayerPatch().getCurrentlyActuallyHitEntities();
-
-                if (!hurtEntities.isEmpty() && hurtEntities.get(0).isAlive()) {
-                    event.getPlayerPatch().getServerAnimator().getPlayerFor(null).reset();
-                    event.getPlayerPatch().reserveAnimation(this.third);
-                    event.getPlayerPatch().getCurrentlyActuallyHitEntities().clear();
-
-
+            if (this.second.equals(event.getAnimation())){
+                if (!hurtEntities.isEmpty() && hurtEntities.getFirst().isAlive()) {
+                    container.getExecutor().reserveAnimation(this.third);
+                    container.getExecutor().getServerAnimator().getPlayerFor(null).reset();
                 }
             }
-        });
-    }
-
-    @Override
-    public void onRemoved(SkillContainer container) {
-        container.getExecutor().getEventListener().removeListener(PlayerEventListener.EventType.ATTACK_ANIMATION_END_EVENT, EVENT_UUID);
+            if (this.second.equals(event.getAnimation()) || this.third.equals(event.getAnimation())) {
+                container.getExecutor().getCurrentlyActuallyHitEntities().clear();}
+        }, this);
     }
 
 
-    @Override
-    public void executeOnServer(SkillContainer container, FriendlyByteBuf args) {
-        container.getExecutor().playAnimationSynchronized(this.first, 0);
-        LivingEntity target = (LivingEntity) container.getExecutor().getTarget();
-        ((ServerPlayer)container.getExecutor().getOriginal()).addEffect(new MobEffectInstance((MobEffect) EpicFightMobEffects.STUN_IMMUNITY.get(), 38, 0, true, false, false));
-        if (target != null && target.isAlive()) {
-            target.addEffect(new MobEffectInstance(MobEffects.MOVEMENT_SLOWDOWN, 36, 50));
+
+        @Override
+        public void executeOnServer(SkillContainer container, CompoundTag arguments) {
+            container.getExecutor().playAnimationSynchronized(this.first, 0);
+            super.executeOnServer(container, arguments);
+            ((ServerPlayer) container.getExecutor().getOriginal()).addEffect(new MobEffectInstance(
+                    BuiltInRegistries.MOB_EFFECT.wrapAsHolder(EpicFightMobEffects.STUN_IMMUNITY.get()),
+                    38, 0, true, false, false
+            ));
         }
-        super.executeOnServer(container, args);
-    }
 
     @Override
     public List<Component> getTooltipOnItem(ItemStack itemStack, CapabilityItem cap, PlayerPatch<?> playerCap) {
         List<Component> list = super.getTooltipOnItem(itemStack, cap, playerCap);
-        this.generateTooltipforPhase(list, itemStack, cap, playerCap, (Map) this.properties.get(0), "kick");
+        this.generateTooltipforPhase(list, itemStack, cap, playerCap, (Map) this.properties.get(0), "dash");
         this.generateTooltipforPhase(list, itemStack, cap, playerCap, (Map) this.properties.get(1), "slash");
-        this.generateTooltipforPhase(list, itemStack, cap, playerCap, (Map) this.properties.get(2), "Slam");
+        this.generateTooltipforPhase(list, itemStack, cap, playerCap, (Map) this.properties.get(2), "Stab");
 
         return list;
     }
